[metadata]
name = django-image-moderation
version = 0.1
author = AlexJMPB
author_email = alexjmpmendoza@gmail.com
maintainer = AlexJMPB
maintainer_email = alexjmpmendoza@gmail.com
description = Django automatic image moderation field using AWS Rekognition
long_description = file:README.rst
url = https://github.com/alexjmpb/django-image-moderation
license = MIT
keywords = django ai moderation image rekognition aws
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
python_requires = >=3.9

[options.packages.find]
exclude =
    tests*